# scratchbox2

./: .dir-locals.el  .editorconfig  .gitignore  0001-Logger-uses-static-local-buffers-no-more-mallocs-fre.patch  0001-scratchbox2-2.3.27-usrsrc.patch  0002-scratchbox2-2.3.52-wrapperargs.patch  0002-support-ccache.patch  0003-accel-ccache.patch  0003-accel-localedef.patch  0004-accel-qtchooser-qmake.patch  0004-support-ccache.patch  0005-accel-ccache.patch  0006-accel-qtchooser-qmake.patch  0007-Quote-PWD-variables-that-may-have-spaces-in-them.patch  0008-Accept-file-descriptor-0-as-log-fd.patch  0009-Add-support-for-x86_64-target.patch  0010-Add-patch-to-not-assume-that-readlink-is-located-int.patch  0011-Add-patch-to-fix-error-message-for-unsupported-targe.patch  0012-Accelerate-compression-utils.patch  0013-Add-postprocessing-for-name-parameter-of-opendir-and.patch  0014-Fix-log-printout.patch  0015-Turn-Werror-to-Wno-error-if-E-1-is-on-make-command-l.patch  0016-Fix-python2.7-acceleration-when-python-not-installed.patch  0017-Add-IF_EXISTS_IN-rule-enumeration.patch  0018-Simplify-function-interfaces.patch  0019-Add-handling-for-IF_EXISTS_IN-conditional-rule.patch  0020-Add-an-example-of-a-conditionally-accelerated-rule.patch  0021-Fix-IF_EXISTS_IN-condition-handling.patch  0022-Added-missing-handling-for-IF_EXISTS_IN-rule.patch  0023-Improve-ruletree-printout.patch  0024-Invert-path-found-logic.patch  0025-Exit-more-gracefully-if-valid-sb2-target-not-found.patch  0026-Print-out-action-tree-offset.patch  0027-Finalize-IF_EXISTS_IN-forward-rule.patch  0028-Add-reverse-mapping-for-IF_EXISTS_IN-rules.patch  0029-Only-accelerate-python-if-explicitly-requested.patch  0030-Add-conditional-acceleration-for-doxygen.patch  0031-Fix-IF_EXISTS_IN-rule-to-require-then_actions.patch  0032-Add-conditional-acceleration-rule-to-obs-rpm-build.patch  0033-Fix-call-to-realpath-with-NULL-second-argument.patch  (+35 more)
debian/: changelog  control  copyright  docs  libsb2.dirs  libsb2.shlibs  rules  scratchbox2.postinst
docs/: SB2_internals_1st_ed_20120425.odt  sb2-config.1  sb2-init.1  sb2-logz.1  sb2-session.1  sb2-show.1  sb2.1  sb2d.1
etc/: host-gcc.specs  sb2.config.sample
execs/: Makefile  exec_map_script_interp.c  exec_policy_ruletree.c  exec_policy_selection.c  exec_postprocess.c  exec_preprocess.c  exec_ruletree_maint.c  sb2_execs.h  sb_exec.c
external_patches/: README  gdb-7.0.1+sb2.patch  glibc-2.10-elf-rtld.c.1.patch  glibc-2.10-ldso-rpath-prefix-option.2.patch  glibc-2.10-nscd-socket-location.4.patch  glibc-2.3.6-elf-rtld.c.patch  glibc-2.5-ld.so-rpath-prefix-option.patch  glibc-2.5-ldso-nodefaultdirs-option.patch  ubuntu_lucid_64bit_fakeroot_fix.patch
fuse/: SConscript
include/: config_hardcoded.h  elf.h  externs.h  libsb2callers.h  lua_bindings.h  mapping.h  processclock.h  rule_tree.h  rule_tree_rpc.h  sb2.h  sb2_network.h  sb2_stat.h  sb2_vperm.h  sb_config.hh  sblib_luaif.h
llbuild/: Makefile  Makefile.include  Makefile.sample  Makefile.subdir-sample  Makefile.toplevel-sample  README  llflock.c
lua/: Makefile  SConscript  lua_bindings.c
lua_scripts/: add_config_to_rule_tree.lua  add_rules_to_rule_tree.lua  argvenvp.lua  argvenvp_gcc.lua  argvenvp_misc.lua  argvenvp_wrappers.lua  argvmods_loader.lua  check_and_print_rules.lua  create_argvmods_rules.lua  create_argvmods_usr_bin_rules.lua  create_reverse_rules.lua  exec_constants.lua  init.lua  init2.lua  init_argvmods_rules.lua  init_autogen_usr_bin_rules.lua  init_modeconfig.lua  init_net_modes.lua  main.lua  mapping.lua  network.lua  rule_constants.lua
luaif/: Makefile  argvenvp.c  luaif.c  network_luaif.c  paths.c  sb_log.c  sblib_luaif.c
mapping/: Makefile  emumode.c  mapping.c  sb_log.c
modeconf/: gcc-4.2.1-specs.devel  host-accepted-packages.devel  host-ignored-packages.devel  sb2rc.devel  sb2rc.emulate  sb2rc.maemo  sb2rc.tools
network/: Makefile  net_rules.c
opensuse_rpm/: build_rpms_for_opensuse.sh  spec_for_opensuse.src
pathmapping/: Makefile  pathlistutils.c  pathmapping.h  pathmapping_interf.c  pathresolution.c  pathresolution_c_engine.c  paths.c  paths_luaif.c  paths_ruletree_maint.c  paths_ruletree_mapping.c
preload/: Makefile  SConscript  chrootgate.c  dbusgates.c  execgates.c  exported_h.tmpl  fdpathdb.c  flexmember.h  gen-interface.pl  generate.py  glob.c  glob.h  glob64.c  glob_internal.h  interface.master  interface.private  libsb2.c  libsb2.h  libsb_env.c  mempcpy.c  miscgates.c  network.c  procfs.c  sb2_mac_glob.h  sb2context.c  sb_alien.c  sb_env.h  sb_exec.c  sb_l10n.c  scratch_buffer.h  syscalls.c  system.c  tmpnamegates.c  union_dirs.c  vperm_filestatgates.c  vperm_statfuncts.c  vperm_uid_gid_gates.c
redir_scripts/: main.lua
rpm/: scratchbox2.spec
rule_tree/: Makefile  rule_tree.c  rule_tree_luaif.c  rule_tree_rpc_client.c  rule_tree_utils.c
sb2d/: Makefile  libsupport.c  rule_tree_lua.h  rule_tree_luaif.c  ruletree_server.c  sb2_server.h  sb2d.c  server_socket.c
sblib/: Makefile  processclock.c  sb2_pthread_if.c  sb2_utils.c  sb_log.c
scripts/: fakechroot  login.sh  sb2rc  scratchbox2  scratchbox2-create  scratchbox2-login  scratchbox2-record  scratchbox2-unpack  scratchbox2-update
tests/: Chroottests.c  init_tests.sh  run.sh  test-argv0.sh  test-fakesh.sh  test-fakestat.sh  test-faketarget.sh  test-floats.sh  test-ldlp.sh  test-libtoolcpp.sh  test-pathexec.sh  test-pthreads.sh  test-rpathlink.sh
utils/: Makefile  SConscript  chroot-uid.c  deb-pkg-tools-wrapper  dpkg-architecture  dpkg-checkbuilddeps  ldconfig  sb2  sb2-build-libtool  sb2-build-libtool.sh  sb2-build-qemuserver  sb2-check-pkg-mappings  sb2-cmp-checkbuilddeps-output.pl  sb2-config  sb2-config-debian  sb2-config-gcc-toolchain  sb2-config-gcc-toolchain.sh.in  sb2-config.sh.in  sb2-exitreport  sb2-generate-locales  sb2-init  sb2-init.sh.in  sb2-interp-wrapper.c  sb2-logz  sb2-monitor.c  sb2-parse-sb2-init-args  sb2-qemu-gdbserver-prepare  sb2-ruletree-client.c  sb2-ruletree.c  sb2-session  sb2-show.c  sb2-start-qemuserver  sb2-upgrade-config  sb2-upgrade-config.sh.in  sb2.bash  sb2.sh.in  sb2dctl.c  sb2init.c  (+4 more)
(+144 files in other folders)
